--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,7 +9,7 @@
     </div>
     <div class="container">
         <div class="searchBox">
-            <input type="text"/>
+            <input type="text" placeholder="Search..."/>
             <a href="/search">Ver o mapa</a>
         </div>
     </div>
