--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,16 +1,32 @@
 {% load static %}
 <head>
     <link rel="stylesheet" type="text/css" href="{% static "css/index.css" %}">
+    <style>
+        @font-face {
+            src: url("http://localhost:8080/static/font/Biko_Regular.ttf");
+            font-family: Biko;
+        }
+
+        *{
+            box-sizing: border-box;
+            font-family: Biko;
+        }
+    </style>
 </head>
 <body>
     <div class="navbar">
         <div class="navbarLogo"><img src="{% static "img/logo.png" %}"/></div>
         <div></div>
+        <div class="navbarButton"><a>Tenho um estabelecimento</a></div>
     </div>
     <div class="container">
         <div class="searchBox">
-            <input type="text" placeholder="Search..."/>
-            <a href="/search">Ver o mapa</a>
+            <h1>Looking somewhere to go?</h1><br>
+            <div class="searchBoxInputContainer">
+                <input type="text" placeholder="Search for Places by name, location..."/><button class="findButton">Find events</button>
+            </div>
+            <br>
+            <a href="/search">See the map</a>
         </div>
     </div>
 </body>
