--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -10,7 +10,7 @@
     <style>
         @font-face {
             font-family: Biko;
-            src: url("http://127.0.0.1:8000/static/font/Biko_Regular.woff");
+            src: url("static/font/Biko_Regular.woff");
         }
 
         * {
