--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" type="text/css" href="{% static "css/index.css" %}">
     <style>
         @font-face {
-            src: url("http://localhost:8080/static/font/Biko_Regular.ttf");
+            src: url("static/font/Biko_Regular.ttf");
             font-family: Biko;
         }
 
