--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,7 +17,7 @@
     <div class="navbar">
         <div class="navbarLogo"><img src="{% static "img/logo.png" %}"/></div>
         <div></div>
-        <div class="navbarButton"><a>Tenho um estabelecimento</a></div>
+        <div class="navbarButton"><a href="/login">Tenho um estabelecimento</a></div>
     </div>
     <div class="container">
         <div class="searchBox">
