--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,11 +17,11 @@
     <div class="navbar">
         <div class="navbarLogo"><img src="{% static "img/logo.png" %}"/></div>
         <div></div>
-        <div class="navbarButton"><a>Tenho um estabelecimento</a></div>
+        <div class="navbarButton"><a href="dashboard">I own a business</a></div>
     </div>
     <div class="container">
         <div class="searchBox">
-            <h1>Looking somewhere to go?</h1><br>
+            <h1>Looking for somewhere to go?</h1><br>
             <div class="searchBoxInputContainer">
                 <input type="text" placeholder="Search for Places by name, location..."/><button class="findButton">Find events</button>
             </div>
