--- a/app/templates/dash_event.html
+++ b/app/templates/dash_event.html
@@ -35,9 +35,11 @@
             </div>
 
             <div class="form-group col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default">
+                <a type="submit" value="Save" class="btn btn-default" href="{% url 'dashboard_home' %}">Save</a>
             </div>
-
+            {% if error %}
+            <p style="color:#FF6347;"> {{ error }}</p>
+            {% endif %}
         </form>
 
     </div>
