--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -7,6 +7,10 @@
     <title>Dashboard</title>
     <link rel="stylesheet" type="text/css" href="{% static "css/dashboard.css" %}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+
     <style>
         @font-face {
             font-family: Biko;
@@ -36,8 +40,6 @@
           <div class="menus">
               <ul class="menus-items">
                   <a href={% url 'dashboard_home' %}><li class="item">Home</li></a>
-                  <a><li class="item">Events</li></a>
-                  <a><li class="item">AD's</li></a>
                   <a><li class="item">Comments</li></a>
                   <a href={% url 'dashboard_profile' %}>
                       <li class="item">Profile</li>
@@ -45,9 +47,13 @@
                   </a>
               </ul>
           </div>
-          <div class="nav-bottom-section">
+          <div class="nav-bottom-section bottom-menu">
             <ul class="bottom-menu">
-                <li class="exit">Exit</li>
+                <form id="logoutForm" action="/logout" method="get" class="form-inline my-2 my-lg-0">
+                    {% csrf_token %}
+                    <li class="exit"><a class="exit-btn" href="javascript:document.getElementById('logoutForm').submit()">Exit</a></li>
+                </form>
+
             </ul>
           </div>
       </aside>
