--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -10,7 +10,7 @@
 
 body{
     margin:0;
-    background-color: #a22db0;
+    background-color: #ffffff;
 }
 
 .navbar{
@@ -19,7 +19,6 @@ body{
     width: 100vw;
     padding: 7px 12px;
     display: flex;
-    box-shadow: 0px 2px 2px #d3d3d3;
 
     position:absolute;
     left:0;
@@ -36,40 +35,63 @@ body{
 }
 
 .container{
-    width:100vw;
-    height:100vh;
+    width:100%;
+    height:100%;
     display: flex;
     align-items: center;
     padding: 15px;
+    background-image: url("../img/indexBackground.jpeg");
+    background-size: 2100px 1400px;
+    background-position-y: -300px ;
 }
+
 
 .searchBox input{
     border:1px solid white;
-    padding: 10px;
-    width: 400px;
+    padding: 15px;
+    width: 40vw;
+    height: 3.5vw;
     outline: none;
     font-size: 12pt;
-    padding-left: 42px;
-
+    padding-left: 53px;
+    margin-left: 1vw;
     background-image: url("../img/loupe.png");
     background-size: 24px 24px;
     background-repeat: no-repeat;
-    background-position: left 9px center;
+    background-position: left 20px center;
+
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
 }
 
 .searchBox a{
     margin-top: 10px;
+    margin-left: 1.5vw;
     color:black;
     text-decoration: none;
     cursor: pointer;
+    color: white;
+    display: block;
+    font-size: 1.5vw;
+}
+
+.searchBox h1{
+    color: white;
+    display: block;
+    margin-left: 1vw;
+    font-size: 3.5vw;
 }
 
 .findButton{
     background-color: black;
     color: white;
     border: 0px;
-    height: 38px;
-    width: 84px;
+    height: 3.5vw;
+    width: 8vw;
+
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+    font-size: 1vw;
 }
 
 .searchBoxInputContainer{
@@ -89,4 +111,12 @@ body{
     color: black;
 }
 
-
+#backgroundImage {
+    max-width: 100%;
+    max-height: 100vh;
+    margin: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
