--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,6 @@
 {% load static %}
 <head>
+    <title>goClubbing</title>
     <link rel="stylesheet" type="text/css" href="{% static "css/index.css" %}">
     <style>
         @font-face {
