--- a/app/templates/dash_home.html
+++ b/app/templates/dash_home.html
@@ -8,37 +8,42 @@
     </div>
     <div class="events">
         <div class="title">
-            <h1>Events</h1>
+            <h1 style="float:left;">Events </h1>
+            <a style="float:right; color: white" href={% url 'dashboard_newevent' %}><i class="mysmalls fa fa-plus"></i></a>
         </div>
         <div class="events-content">
+            {% for event in events %}
             <div class="pub">
                 <div>
-                    <p class="fa">Event Number 1</p>
-                    <a href={% url 'dashboard_event' num=1 %}><i class="fa fa-pencil"></i></a>
+                    <p class="fa" style="font-weight: bold">{{ event.name }}</p>
+                    <a href={% url 'dashboard_event' num=event.id %}><i style="color:black;" class="fa fa-pencil"></i></a>
+                    <p class="grey">{{ event.location }}</p>
+                    <p class="grey">{{ event.datetime }}</p>
+                    <p style="text-align: center"><i class="fa fa-check"></i>278</p>
                 </div>
-                <span></span>
             </div>
-            <div class="pub"></div>
-            <div class="pub"></div>
-            <div class="pub"></div>
-            <div class="pub"></div>
-            <div class="pub"></div>
-            <div class="pub"></div>
+            {% endfor %}
+
         </div>
         <img id="background-image" src="{% static "img/DashBoardFundo.png" %}"/>
     </div>
     <div class="pubs">
         <div class="title">
-            <h1>Ads</h1>
+            <h1 style="float: left">Ads</h1>
+            <a style="float:right; color: white" href={% url 'dashboard_newad' %}><i class="mysmalls fa fa-plus"></i></a>
         </div>
         <div class="pubs-content">
-            <div class="pub"></div>
-            <div class="pub"></div>
-            <div class="pub"></div>
-            <div class="pub"></div>
-            <div class="pub"></div>
-            <div class="pub"></div>
-            <div class="pub"></div>
+            {% for ad in ads %}
+            <div class="pub">
+                <div>
+                    <p class="fa" style="font-weight: bold">{{ ad.event }} Add</p>
+                    <a href={% url 'dashboard_ad' num=ad.id %}><i style="color:black;" class="fa fa-pencil"></i></a>
+                    <p class="grey">{{ ad.expire }}</p>
+                    <p class="grey">{{ ad.body|truncatewords:5 }}</p>
+                    <p style="text-align: center"><i class="fa fa-heart"></i> 278</p>
+                </div>
+            </div>
+            {% endfor %}
         </div>
         <img id="background-image" src="{% static "img/DashBoardFundo3.png" %}"/>
     </div>
@@ -48,7 +53,11 @@
             <a class="edit-button" href={% url 'dashboard_profile' %}><i class="fa fa-pencil"></i></a>
         </div>
         <div class="profile-content">
-            <div class="profile"></div>
+            <div class="profile">
+                <p class="prof-text">{{ self.name }} | {{ self.type }}</p>
+                <p class="prof-text">{{ self.location }}</p>
+                <p class="prof-text">{{ self.contact_email }} | {{ self.contact_phone }}</p>
+            </div>
         </div>
     </div>
     <div class="comments">
@@ -56,13 +65,13 @@
             <h1>Comments</h1>
         </div>
         <div class="comments-content">
-            <div class="comment"></div>
-            <div class="comment"></div>
-            <div class="comment"></div>
-            <div class="comment"></div>
-            <div class="comment"></div>
-            <div class="comment"></div>
-            <div class="comment"></div>
+            {% for comment in comments %}
+            <div class="comment">
+                    <p class="fa" style="font-weight: bold">Comment in {{ comment.event }} <a href={% url 'dashboard_event' num=1 %}><i style="color:black;" class="fa fa-trash"></i></a></p>
+                    <p class="grey">{{ comment.classification }}</p>
+                    <p class="grey">{{ comment.body|truncatewords:50 }}</p>
+            </div>
+            {% endfor %}
         </div>
         <img id="background-image" src="{% static "img/DashBoardFundo2.png" %}"/>
     </div>
