To Do: -filtering functionality, -save and delete logic, -like and will attend marks

--- a/app/static/css/dashboard.css
+++ b/app/static/css/dashboard.css
@@ -437,3 +437,20 @@ html, body {
     background-color: white;
     color: #194350 !important;
 }
+/*------------LISTINGS--------------*/
+.my-list{
+    margin: 5%;
+}
+
+.list-group-item{
+    padding: 5%;
+}
+
+.edit-list{
+    color: black;
+    margin: 0% 2%;
+}
+.black{
+    float: right;
+    color: black;
+}
