--- a/app/templates/see_events.html
+++ b/app/templates/see_events.html
@@ -1,10 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends "dashboard.html" %}
+{% load static %}
+{% block content %}
+<div>
+    <div>
+        <h4 class="form-title" style="color:#000; margin-top: 4%;">My Events</h4>
+    </div>
+    <ul class="list-group list-group-flush my-list">
+        {% for event in events %}
+            {% if event.business == self %}
+        <li class="list-group-item">{{ event.name}}<a ><i class="fa fa-trash black"></i></a><a href={% url 'dashboard_event' num=event.id %}><i style="float: right" class="fa fa-pencil edit-list"></i></a></li>
+        {% endif %}
+        {% endfor %}
+    </ul>
+</div>
+{% endblock %}
