--- a/app/static/css/search.css
+++ b/app/static/css/search.css
@@ -11,7 +11,7 @@ body{
     width: 100vw;
     padding: 15px;
     display: flex;
-    box-shadow: 0px 2px 2px #d3d3d3;
+    box-shadow: 0px 10px 2px #d3d3d3;
 }
 
 .navbar div{
@@ -80,8 +80,7 @@ body{
     bottom:0;
     right:0;
     background-color: white;
-    width: 0px;
-    z-index: 2;
+    width: 30vw;
     display: flex;
     flex-direction: column;
     padding: 5px;
@@ -118,4 +117,12 @@ body{
 
 .modalImages img{
     width:100%;
+}
+
+.map {
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
