update correção login

--- a/app/templates/auth.html
+++ b/app/templates/auth.html
@@ -22,7 +22,7 @@
     <div class="navbar">
         <div class="navbarLogo"><img src="{% static "img/logo.png" %}"/></div>
         <div></div>
-        <div class="navbarButton">{% if auth_signup %} <a href="/login">Login</a> {% else %} <a href="/signup">Register my business</a> {% endif %}</div>
+        <div class="navbarButton">{% if auth_signup %} <a href="/login/">Login</a> {% else %} <a href="/signup/">Register my business</a> {% endif %}</div>
     </div>
     <div class="container">
         <form action="." method="post" class="form-horizontal">
