--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,7 +18,7 @@
     <div class="navbar">
         <div class="navbarLogo"><img src="{% static "img/logo.png" %}"/></div>
         <div></div>
-        <div class="navbarButton"><a href="/login">I own a business</a></div>
+        <div class="navbarButton"><a href="/login/">I own a business</a></div>
     </div>
     <div class="container">
         <div class="searchBox">
