--- a/app/templates/dash_ad.html
+++ b/app/templates/dash_ad.html
@@ -23,13 +23,16 @@
                 {{ form.dress_code.label_tag }}
                 {{ form.dress_code }}
             </div>
+            <div class="form-group col-md-offset-2 col-md-10">
+                <a type="delete" value="Delete" class="btn btn-default" href="{% url 'dashboard_ad_delete' num=num %}">Delete</a>
+            </div>
 
             <div class="form-group col-md-offset-2 col-md-10">
-                <a type="submit" value="Save" class="btn btn-default" href="{% url 'dashboard_home' %}">Save</a>
+                <input type="submit" value="Save" class="btn btn-default">
             </div>
-            {% if error %}
-            <p style="color:#FF6347;"> {{ error }}</p>
-            {% endif %}
+				{% for field in form %}
+					{% if field.errors %}<li>{{ field.label }}: {{ field.errors|striptags }}</li>{% endif %}
+				{% endfor %}
         </form>
 
     </div>
