--- a/app/templates/dash_event.html
+++ b/app/templates/dash_event.html
@@ -13,6 +13,7 @@
                 {{ form.location.label_tag }}
                 {{ form.location }}
             </div>
+
             <div class="form-group">
                 {{ form.datetime.label_tag }}
                 {{ form.datetime }}
@@ -25,25 +26,29 @@
                 {{ form.theme }}
             </div>
             <div class="form-group">
+                {{ form.organization.label_tag }}
+                {{ form.organization }}
+            </div>
+            <div class="form-group">
                 {{ form.min_age.label_tag }}
                 {{ form.min_age }}
             </div>
+
             <div class="form-group">
                 {{ form.dress_code.label_tag }}
                 {{ form.dress_code }}
 
             </div>
-                {{ event }}
             <div class="form-group col-md-offset-2 col-md-10">
-                <a type="delete" value="Delete" class="btn btn-default" href="{% url 'dashboard_home'  %}">Delete</a>
+                <a type="delete" value="Delete" class="btn btn-default" href="{% url 'dashboard_delete' num=eventid %}">Delete</a>
             </div>
 
             <div class="form-group col-md-offset-2 col-md-10">
-                <a type="submit" value="Save" class="btn btn-default" href="{% url 'dashboard_home' %}">Save</a>
+                <input type="submit" value="Save" class="btn btn-default">
             </div>
-            {% if error %}
-            <p style="color:#FF6347;"> {{ error }}</p>
-            {% endif %}
+				{% for field in form %}
+					{% if field.errors %}<li>{{ field.label }}: {{ field.errors|striptags }}</li>{% endif %}
+				{% endfor %}
         </form>
 
     </div>
