--- a/app/templates/dash_new_event.html
+++ b/app/templates/dash_new_event.html
@@ -32,13 +32,17 @@
                 {{ form.dress_code.label_tag }}
                 {{ form.dress_code }}
             </div>
-
-            <div class="form-group col-md-offset-2 col-md-10">
-                <a type="submit" value="Save" class="btn btn-default" href="{% url 'dashboard_home' %}">Save</a>
+            <div class="form-group">
+                {{ form.organization.label_tag }}
+                {{ form.organization }}
             </div>
-            {% if error %}
-            <p style="color:#FF6347;"> {{ error }}</p>
-            {% endif %}
+            <div class="form-group col-md-offset-2 col-md-10">
+                <button type="submit" value="Save" class="btn btn-default">Save</button>
+            </div>
+
+				{% for field in form %}
+					{% if field.errors %}<li>{{ field.label }}: {{ field.errors|striptags }}</li>{% endif %}
+				{% endfor %}
         </form>
 
     </div>
