--- a/app/templates/see_ads.html
+++ b/app/templates/see_ads.html
@@ -3,12 +3,12 @@
 {% block content %}
 <div>
     <div>
-        <h4 class="form-title" style="color:#000; margin-top: 4%;">My Events</h4>
+        <h4 class="form-title" style="color:#000; margin-top: 4%;">My Advertisements</h4>
     </div>
     <ul class="list-group list-group-flush my-list">
         {% for ad in ads %}
             {% if ad.event.business == self %}
-        <li class="list-group-item">Ad for {{ ad.event}}<a ><i class="fa fa-trash black"></i></a><a href={% url 'dashboard_ad' num=ad.id %}><i style="float: right" class="fa fa-pencil edit-list"></i></a></li>
+        <li class="list-group-item">Ad for {{ad.event.name}}<a href="{% url 'dashboard_ad_delete' num=ad.id %}"><i class="fa fa-trash black"></i></a><a href={% url 'dashboard_ad' num=ad.id %}><i style="float: right" class="fa fa-pencil edit-list"></i></a></li>
             {% endif %}
         {% endfor %}
     </ul>
