--- a/app/templates/auth.html
+++ b/app/templates/auth.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <div class="navbar">
-        <div class="navbarLogo"><img src="{% static "img/logo.png" %}"/></div>
+        <div class="navbarLogo" onclick="window.location.href='/'"><img src="{% static "img/logo.png" %}"/></div>
         <div></div>
         <div class="navbarButton">{% if auth_signup %} <a href="/login/">Login</a> {% else %} <a href="/signup/">Register my business</a> {% endif %}</div>
     </div>
