--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div class="navbar">
-        <div class="navbarLogo"><img src="{% static "img/logo.png" %}"/></div>
+        <div class="navbarLogo" onclick="window.location.href='/'"><img src="{% static "img/logo.png" %}"/></div>
         <div>
 
         </div>
